// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  Hello world
</p>
`;

exports[`composition hook should return with Badge props 1`] = `
Object {
  "className": "css-1h6tcik css-63it0p css-jwhr8m bb-Box bb-Badge",
  "ref": Object {
    "current": undefined,
  },
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-2 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`overrides Badge.attached should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  position: absolute;
  top: -0.5em;
  right: -0.5em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`overrides Badge.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`overrides Badge.sizes.default should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`overrides Badge.sizes.large should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  font-size: 1.25rem;
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`overrides Badge.sizes.medium should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  font-size: 1rem;
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  Hello world
</div>
`;

exports[`props should render correctly for isAttached 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default,#000000);
  border-radius: 6px;
  box-shadow: 0 1px 3px 0px rgba(0,0,0,0.05);
  color: var(--bb-palette-defaultInverted,#000000);
  fill: var(--bb-palette-defaultInverted,#000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900,#000000);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200,#000000) 0px 0px 0px 1px, var(--bb-palette-gray100,#000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-3:hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-3:hover:active {
  background-color: var(--bb-palette-white800,#000000);
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
  position: absolute;
  top: -0.5em;
  right: -0.5em;
}

<button
  class="emotion-3 emotion-1 emotion-2 bb-Box bb-Button"
  style="position:relative;"
  type="button"
>
  Test
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
  />
</button>
`;

exports[`props should render correctly for palette danger 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-danger,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-dangerInverted,#000000);
  fill: var(--bb-palette-dangerInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly for palette primary 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly for palette secondary 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-secondary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-secondaryInverted,#000000);
  fill: var(--bb-palette-secondaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly for palette success 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-success,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-successInverted,#000000);
  fill: var(--bb-palette-successInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly for palette warning 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-warning,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-warningInverted,#000000);
  fill: var(--bb-palette-warningInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly for size default 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly for size large 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

.emotion-0 {
  font-size: 1.25rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly for size medium 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

.emotion-0 {
  font-size: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-2 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  Hello world
</div>
`;

exports[`props should render correctly with no content 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  height: 1em;
  width: 1em;
  padding: 0px;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
/>
`;

exports[`theming Badge.attached should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
  position: absolute;
  top: -0.5em;
  right: -0.5em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`theming Badge.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`theming Badge.sizes.default should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`theming Badge.sizes.large should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  font-size: 1.25rem;
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;

exports[`theming Badge.sizes.medium should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--bb-palette-primary,#000000);
  box-sizing: content-box;
  padding: 0 0.4em;
  color: var(--bb-palette-primaryInverted,#000000);
  fill: var(--bb-palette-primaryInverted,#000000);
  font-size: 0.75rem;
  font-weight: 600;
  height: 1.2em;
}

.emotion-0 {
  font-size: 1rem;
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Badge"
>
  hello world
</div>
`;
